# alpha-trader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-10-alpha-trader-plan.md
docs/superpowers/specs/: 2026-04-10-alpha-trader-design.md
src/: config.py  main.py
src/agents/: base.py  decision.py  fundamental.py  risk.py  sentiment.py  technical.py
src/api/: app.py
src/api/routes/: dashboard.py  history.py  logs.py  positions.py  settings.py  signals.py
src/api/static/: style.css
src/api/templates/: base.html  history.html  logs.html  overview.html  positions.html  settings.html  signals.html
src/core/: executor.py  maintenance.py  portfolio.py  scheduler.py
src/models/: __init__.py  config.py  database.py  risk_event.py  signal.py  snapshot.py  trade.py
src/notifications/: telegram.py
src/utils/: screening.py
tests/: conftest.py
tests/test_agents/: test_decision.py  test_fundamental.py  test_risk.py  test_sentiment.py  test_technical.py
tests/test_api/: test_dashboard.py
tests/test_core/: test_executor.py  test_maintenance.py  test_portfolio.py  test_scheduler.py
tests/test_models/: test_trade.py
tests/test_notifications/: test_telegram.py
tests/test_utils/: test_screening.py
